--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloWorld">
-        <activity android:name=".CActivity"/>
+        <activity android:name=".ThirdActivity"></activity>
+        <activity android:name=".SecondActivity" />
+        <activity android:name=".CActivity" />
         <activity android:name=".BActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
